--- a/index.html
+++ b/index.html
@@ -18,6 +18,16 @@
     -->
     <h1>Exceptional</h1>
     <h2>Realty Group</h2>
+
+    <img src="images/intro-pic.jpg" alt="A beautiful living room." 
+    title="Welcome to Exceptional Realty Group">
+    <!-- 
+   foldername/ = go inside the folder
+   vs filename = use a file in the current directory
+   to leave current folder ../ = leave current folder and go 
+   up to parent directory
+    -->
+
     <p>Hello World.</p>
     <p>Hello Moon.</p>
 
